--- a/000_johannes/01_abgabe/Makefile
+++ b/000_johannes/01_abgabe/Makefile
@@ -26,7 +26,7 @@ $(OBJDIR)/%: $(OBJDIR)/%.o
 
 $(OUTDIR)/deviceQuery.o: Makefile $(NVIDIADIR)/deviceQuery.cu
 	mkdir -p $(OBJDIR)
-	$(NVCC) $(NVCC_FLAGS) $(NVIDIADIR)/deviceQuery.cu -c -o $(OUTDIR)/deviceQuery.o
+	$(NVCC) $(NVCC_FLAGS) $(NVIDIADIR)/deviceQuery.cu -c -o $(OBJDIR)/deviceQuery.o
 
 KERNELS = $(OBJDIR)/01_grayscale \
 	 $(OBJDIR)/02_blur \
