--- a/000_johannes/dbscan/andrade/001/Makefile
+++ b/000_johannes/dbscan/andrade/001/Makefile
@@ -19,12 +19,14 @@ NVIDIADIR=./nvidia
 
 all: $(OBJDIR)/andrade
 
-$(OBJDIR)/andrade: $(OBJDIR)/andrade.o $(OBJDIR)/dbscan.o
+$(OBJDIR)/andrade: $(OBJDIR)/andrade.o $(OBJDIR)/dbscan.o $(OBJDIR)/accumulate.o
 	$(NVCC) $(GENCODE_FLAGS) -o $@ $(NVCC_LDFLAGS) $^
 
 $(OBJDIR)/andrade.o: $(SRCDIR)/andrade.cc $(SRCDIR)/read_input.h $(SRCDIR)/dbscan.h
 
 $(OBJDIR)/dbscan.o: $(SRCDIR)/dbscan.cu $(SRCDIR)/dbscan.h $(SRCDIR)/cuda_helpers.h
+
+$(OBJDIR)/accumulate.o: $(SRCDIR)/accumulate.cu $(SRCDIR)/accumulate.h $(SRCDIR)/cuda_helpers.h
 
 $(OBJDIR)/%.o: $(SRCDIR)/%.cu
 	@mkdir -p $(OBJDIR)
