Graph building (seems to work)

--- a/000_johannes/dbscan/andrade/001/Makefile
+++ b/000_johannes/dbscan/andrade/001/Makefile
@@ -19,17 +19,23 @@ NVIDIADIR=./nvidia
 
 all: $(OBJDIR)/andrade
 
-$(OBJDIR)/andrade: $(OBJDIR)/andrade.o $(OBJDIR)/dbscan.o $(OBJDIR)/accumulate.o \
-$(OBJDIR)/build_incidence_lists.o
+$(OBJDIR)/andrade: \
+	$(OBJDIR)/andrade.o $(OBJDIR)/count_neighbors.o $(OBJDIR)/accumulate.o \
+	$(OBJDIR)/build_incidence_lists.o $(OBJDIR)/build_graph.o
 	$(NVCC) $(GENCODE_FLAGS) -o $@ $(NVCC_LDFLAGS) $^
 
-$(OBJDIR)/andrade.o: $(SRCDIR)/andrade.cc $(SRCDIR)/read_input.h $(SRCDIR)/dbscan.h
+$(OBJDIR)/andrade.o: $(SRCDIR)/andrade.cc $(SRCDIR)/read_input.h $(SRCDIR)/build_graph.h
 
-$(OBJDIR)/dbscan.o: $(SRCDIR)/dbscan.cu $(SRCDIR)/dbscan.h $(SRCDIR)/cuda_helpers.h
+$(OBJDIR)/build_graph.o: $(SRCDIR)/build_graph.cc $(SRCDIR)/count_neighbors.h \
+	$(SRCDIR)/accumulate.h $(SRCDIR)/build_incidence_lists.h $(SRCDIR)/cuda_helpers.h \
+	$(SRCDIR)/build_graph.h
+
+$(OBJDIR)/count_neighbors.o: $(SRCDIR)/count_neighbors.cu $(SRCDIR)/count_neighbors.h $(SRCDIR)/cuda_helpers.h
 
 $(OBJDIR)/accumulate.o: $(SRCDIR)/accumulate.cu $(SRCDIR)/accumulate.h $(SRCDIR)/cuda_helpers.h
 
-$(OBJDIR)/build_incidence_lists.o: $(SRCDIR)/build_incidence_lists.cu $(SRCDIR)/build_incidence_lists.h $(SRCDIR)/cuda_helpers.h
+$(OBJDIR)/build_incidence_lists.o: $(SRCDIR)/build_incidence_lists.cu $(SRCDIR)/build_incidence_lists.h $(SRCDIR)/cuda_helpers.h \
+	$(SRCDIR)/device_vector.h
 
 $(OBJDIR)/%.o: $(SRCDIR)/%.cu
 	@mkdir -p $(OBJDIR)
