--- a/000_johannes/dbscan/andrade/001/Makefile
+++ b/000_johannes/dbscan/andrade/001/Makefile
@@ -21,10 +21,13 @@ all: $(OBJDIR)/andrade
 
 $(OBJDIR)/andrade: \
 	$(OBJDIR)/andrade.o $(OBJDIR)/count_neighbors.o $(OBJDIR)/prefix_scan.o \
-	$(OBJDIR)/build_incidence_lists.o $(OBJDIR)/build_graph.o $(OBJDIR)/bfs.o
+	$(OBJDIR)/build_incidence_lists.o $(OBJDIR)/build_graph.o $(OBJDIR)/bfs.o $(OBJDIR)/warmup.o
 	$(NVCC) $(GENCODE_FLAGS) -o $@ $(NVCC_LDFLAGS) $^
 
-$(OBJDIR)/andrade.o: $(SRCDIR)/andrade.cc $(SRCDIR)/read_input.h $(SRCDIR)/build_graph.h
+$(OBJDIR)/andrade.o: $(SRCDIR)/andrade.cc $(SRCDIR)/read_input.h $(SRCDIR)/build_graph.h \
+	$(SRCDIR)/warmup.h
+
+$(OBJDIR)/warmup.o: $(SRCDIR)/warmup.cu $(SRCDIR)/warmup.h
 
 $(OBJDIR)/build_graph.o: $(SRCDIR)/build_graph.cc $(SRCDIR)/count_neighbors.h \
 	$(SRCDIR)/prefix_scan.h $(SRCDIR)/build_incidence_lists.h $(SRCDIR)/cuda_helpers.h \
